Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83648

Wrong default value for QTreeWidgetItem::ChildIndicatorPolicy

XMLWordPrintable

    • a6e8dd7bf8dcbf806bcefae8309d33051e3cb5a2 (qt/qtbase/6.0) 39773571202194cafd4992e4fe7c4a33733b53af (qt/qtbase/dev) 3dbc5816ff51976dac366eaaa5228a8d7f41cfbc (qt/tqtc-qtbase/tqtc/lts-5.15)

      referring to https://doc.qt.io/qt-5/qtreewidgetitem.html#setChildIndicatorPolicy

      this states:

      "Sets the item indicator policy. This policy decides when the tree branch expand/collapse indicator is shown. The default value is ShowForChildren."

      Except "ShowForChildren" does not appear to be a legal value of the enumerated type

      enum QTreeWidgetItem::ChildIndicatorPolicy

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            pir Peter Rockett
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes