QTreeWidgetItem: fix documentation error for childIndicatorPolicy()

The default value is 'DontShowIndicatorWhenChildless' and not
'ShowForChildren'.

Fixes: QTBUG-83648
Change-Id: I5d4dd9f3f58bcac09ed38d8ae451e3b771695ce7
Reviewed-by: Samuel Gaist <samuel.gaist@idiap.ch>
(cherry picked from commit 39773571202194cafd4992e4fe7c4a33733b53af)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>